# student-academic-openenv

./: .gitignore  Dockerfile  Dockerfile.baseline  README.md  app.py  demo.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  grader.py  models.py  parser.py  policies.py  tasks.py
scripts/: baseline.py  gpt_baseline.py
server/: app.py
