[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-academic-openenv"
version = "1.0.0"
description = "OpenEnv benchmark for student academic email triage and scheduling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7.0",
    "gradio>=4.44.0",
    "openai>=1.30.0",
    "pyyaml>=6.0.1",
    "openenv-core>=0.1.0"
]

[tool.setuptools]
packages = ["env", "scripts"]

[project.scripts]
server = "server.app:main"